# BetterTexturePacks

./: CMakeLists.txt  README.md  mod.json
.github/workflows/: build.yml  multi-platform.yml
BetterTexturePackTool/: BuildNewPack.bat
inc/: imagenthisfixesit.hpp
src/: connect.hpp  gdfiles.hpp  main.cpp
src/JsonPacks/: jsonmain.h
src/luafixes/: geodequickpopup.hpp
src/publicvars/: vars.h
